--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,4 @@
-<section class="text-gray-400 bg-gray-200 dark:bg-gray-900 body-font">
+<section class="main-container">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
       @for (card of cards; track $index){
