--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div
-  class="min-hi-sccreen min-w-full bg-slate-200 dark:bg-slate-700"
+  class="min-h-screen min-w-full bg-slate-200 dark:bg-slate-700"
   [ngClass]="darkModeService.darkModeSignal()"
 >
   <app-navbar />
-  <app-content />
+  <router-outlet></router-outlet>
   <app-footer />
 </div>
