--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,152 +1,4 @@
 <footer class="text-gray-600 body-font bg-gray-300 dark:bg-gray-800">
-  <div
-    class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col"
-  >
-    <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a
-        class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900 dark:text-gray-200"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-          viewBox="0 0 24 24"
-        >
-          <path
-            d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-          ></path>
-        </svg>
-        <span class="ml-3 text-xl dark:text-gray-200">Tailblocks</span>
-      </a>
-      <p class="mt-2 text-sm text-gray-500 dark:text-gray-200">
-        Air plant banjo lyft occupy retro adaptogen indego
-      </p>
-    </div>
-    <div
-      class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
-    >
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2
-          class="title-font font-medium text-gray-900 dark:text-gray-200 tracking-widest text-sm mb-3"
-        >
-          CATEGORIES
-        </h2>
-        <nav class="list-none mb-10">
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >First Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Second Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Third Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Fourth Link</a
-            >
-          </li>
-        </nav>
-      </div>
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2
-          class="title-font font-medium text-gray-900 dark:text-gray-200 tracking-widest text-sm mb-3"
-        >
-          CATEGORIES
-        </h2>
-        <nav class="list-none mb-10">
-          <li>
-            <a class="text-gray-600 hover:text-gray-800 dark:text-gray-200"
-              >First Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 hover:text-gray-800 dark:text-gray-200"
-              >Second Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 hover:text-gray-800 dark:text-gray-200"
-              >Third Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 hover:text-gray-800 dark:text-gray-200"
-              >Fourth Link</a
-            >
-          </li>
-        </nav>
-      </div>
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2
-          class="title-font font-medium text-gray-900 dark:text-gray-200 tracking-widest text-sm mb-3"
-        >
-          CATEGORIES
-        </h2>
-        <nav class="list-none mb-10">
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >First Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Second Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Third Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Fourth Link</a
-            >
-          </li>
-        </nav>
-      </div>
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2
-          class="title-font font-medium text-gray-900 dark:text-gray-200 tracking-widest text-sm mb-3"
-        >
-          CATEGORIES
-        </h2>
-        <nav class="list-none mb-10">
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >First Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Second Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Third Link</a
-            >
-          </li>
-          <li>
-            <a class="text-gray-600 dark:text-gray-200 hover:text-gray-800"
-              >Fourth Link</a
-            >
-          </li>
-        </nav>
-      </div>
-    </div>
-  </div>
   <div class="bg-gray-100 dark:bg-gray-800">
     <div
       class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row"
@@ -154,13 +6,13 @@
       <p
         class="text-gray-500 dark:text-gray-200 text-sm text-center sm:text-left"
       >
-        © 2024 Tailblocks —
+        Copyright © 2024 —
         <a
-          href="https://twitter.com/knyttneve"
+          href="https://www.instagram.com/su._.mmh/"
           rel="noopener noreferrer"
           class="text-gray-600 dark:text-gray-200 ml-1"
           target="_blank"
-          >&#64;knyttneve</a
+          >&#64;SuMyatMyatHtay</a
         >
       </p>
       <span
