--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,80 +1,99 @@
 <header class="bg-white dark:bg-gray-800 shadow dark:shadow-2xl sticky top-0">
   <div
-    class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <a
-      class="flex title-font font-medium items-center text-gray-900 dark:text-gray-200 mb-4 md:mb-0"
+      routerLink="/"
+      class="flex title-font font-medium items-center text-gray-900 dark:text-gray-200 md:mb-0 justify-center"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-        viewBox="0 0 24 24"
+      <div
+        class="relative w-10 h-10 bg-white border-2 border-indigo-400 rounded-full overflow-hidden"
       >
-        <path
-          d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-        ></path>
-      </svg>
+        <img
+          src="../../assets/cat.jpg"
+          alt="Profile Picture"
+          class="w-full h-full object-cover"
+        />
+      </div>
       <span class="ml-3 text-xl">SuPortfolio</span>
     </a>
-    <nav
-      class="md:ml-auto flex flex-wrap items-center text-base justify-center text-gray-900 dark:text-gray-200"
+    <button
+      data-collapse-toggle="navbar-default"
+      type="button"
+      (click)="toggleMenu()"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      aria-controls="navbar-default"
+      aria-expanded="false"
     >
-      <a class="mr-5 hover:text-gray-900 dark:hover:text-green-500"
-        >First Link</a
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="w-5 h-5"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 17 14"
       >
-      <a class="mr-5 hover:text-gray-900 dark:hover:text-green-500"
-        >Second Link</a
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 1h15M1 7h15M1 13h15"
+        />
+      </svg>
+    </button>
+    <div
+      [ngClass]="{ block: isMenuOpen, hidden: !isMenuOpen }"
+      class="hidden w-full md:block md:w-auto"
+      id="navbar-default"
+    >
+      <nav
+        class="md:ml-auto flex flex-wrap items-center text-base justify-center text-gray-900 dark:text-gray-200"
       >
-      <a class="mr-5 hover:text-gray-900 dark:hover:text-green-500"
-        >Third Link</a
-      >
-      <a class="mr-5 hover:text-gray-900 dark:hover:text-green-500"
-        >Fourth Link</a
-      >
-    </nav>
-    <div class="relative mt-4 md:mt-0">
-      <div class="flex items-center">
-        @if(darkModeService.darkModeSignal() === "dark"){
-        <span (click)="toggleDarkMode()">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-6 h-6 dark:text-gray-400"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
-            />
-          </svg>
-        </span>
-        } @else {
-        <span (click)="toggleDarkMode()">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-6 h-6"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
-            />
-          </svg>
-        </span>
-        }
-      </div>
+        <a class="header-link" routerLink="/content/aboutme">About Me</a>
+        <a class="header-link" routerLink="/content/projects">Projects</a>
+        <a class="header-link" routerLink="/content">Side Projects</a>
+
+        <div
+          class="flex items-center justify-center border border-gray-200 rounded-lg"
+        >
+          @if(darkModeService.darkModeSignal() === "dark"){
+          <span (click)="toggleDarkMode()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 header-link"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
+              />
+            </svg>
+          </span>
+          } @else {
+          <span (click)="toggleDarkMode()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
+              />
+            </svg>
+          </span>
+          }
+        </div>
+      </nav>
     </div>
   </div>
 </header>
