File structure update

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
           class="w-full h-full object-cover"
         />
       </div>
-      <span class="ml-3 text-xl">SuPortfolio</span>
+      <span class="ml-3 text-xl">Su Myat Myat Htay</span>
     </a>
     <button
       data-collapse-toggle="navbar-default"
@@ -50,8 +50,8 @@
       <nav
         class="md:ml-auto flex flex-wrap items-center text-base justify-center text-gray-900 dark:text-gray-200"
       >
-        <a class="header-link" routerLink="/content/aboutme">About Me</a>
-        <a class="header-link" routerLink="/content/projects">Projects</a>
+        <a class="header-link" routerLink="/aboutme">About Me</a>
+        <a class="header-link" routerLink="/projects">Projects</a>
         <a class="header-link" routerLink="/content">Side Projects</a>
 
         <div
