just before installing angular three

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       class="flex title-font font-medium items-center text-gray-900 dark:text-gray-200 md:mb-0 justify-center"
     >
       <div
-        class="relative w-10 h-10 bg-white border-2 border-indigo-400 rounded-full overflow-hidden"
+        class="relative w-10 h-10 bg-white border-2 border-red-700 dark:border-green-500 rounded-full overflow-hidden"
       >
         <img
           src="../../assets/cat.jpg"
@@ -15,7 +15,7 @@
           class="w-full h-full object-cover"
         />
       </div>
-      <span class="ml-3 text-xl">Su Myat Myat Htay</span>
+      <span class="ml-3 text-xl dark:text-green-500">Su Myat Myat Htay</span>
     </a>
     <button
       data-collapse-toggle="navbar-default"
